# RAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.py  deploy.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.py
docs/: code-review-2026-06-26.md  deployment-guide.md  deployment-step-by-step.md  deployment.md  engineering-infra-plan.md  permission-design.md  project-review.md  resume-v2.md  resume.md  tech-debt-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
prompts/: agent_system.yaml  quality_check.yaml  rewrite.yaml  router.yaml
rag/: agent.py  api.py  auth.py  batch_importer.py  bm25_store.py  chunker.py  cleaner.py  concurrency.py  embedder.py  eval.py  feedback_processor.py  folder_indexer.py  gap_analyzer.py  generator.py  guard.py  kb_metadata.py  knowledge_base.py  loader.py  logging_config.py  memory.py  models.py  permissions.py  pipeline.py  prompt_manager.py  query_rewriter.py  redis_cache.py  reranker.py  resilience.py  retriever.py  suggest.py  tools.py  tracker.py  user_db.py  vector_store.py
scripts/: deploy.sh  locustfile.py  run_eval.py  run_stress_test.sh
static/: index.html
tests/: conftest.py  test_agent.py  test_analysis.py  test_api.py  test_api_concurrency.py  test_async_cleanup.py  test_auth_jwt.py  test_auth_jwt_persistence.py  test_batch_import.py  test_bm25_store.py  test_chunker.py  test_cleaner.py  test_code_review_fixes.py  test_concurrency.py  test_conversations.py  test_data_sources.py  test_data_sources_api.py  test_e2e.py  (+42 more)
(+705 files in other folders)
