[project]
name = "rag-knowledge-base"
version = "3.0.0"
description = "基于检索增强生成的智能知识库系统"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.18,<2",
    "fastapi>=0.124,<1",
    "uvicorn>=0.38,<1",
    "pydantic-settings>=2.14,<3",
    "openai>=2.37,<3",
    "langchain-text-splitters>=1.1,<2",
    "rank-bm25>=0.2,<1",
    "jieba>=0.42,<1",
    "opendataloader-pdf>=2.4,<3",
    "python-docx>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-community>=0.4,<1",
    "langchain-openai>=1.2,<2",
    "matplotlib>=3.9,<4",
    "openpyxl>=3.1,<4",
    "chardet>=5.2,<6",
    "requests>=2.33,<3",
    "httpx>=0.28,<1",
    "python-jose[cryptography]>=3.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
